testsuite/poke.pkl/struct-ref-diag-2.pk
/* { dg-do compile } */

type Foo = struct { int foo; int bar; };

var f = Foo {};
f.
  jaja = 2; /* { dg-error "doesn't exist" } */
